--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
-  "name": "vue3demo",
+  "name": "miao",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
+    "build": "vue-cli-service build --mode prod",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "tsyvue": "^0.1.24",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3"
   },
