--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
-    "tsyvue": "^0.1.26",
+    "pug-plain-loader": "^1.1.0",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3"
   },
